# ECS

./: .clangd  .gitignore  CMakeLists.txt  LICENSE
include/: delegate.hpp  ecs.hpp  types.hpp  world.hpp
include/component/: component.hpp  imanager.hpp  manager.hpp
include/component/inl/: manager.inl
include/entity/: entity.hpp  manager.hpp
include/inl/: delegate.inl  world.inl
include/thread/: jobs.hpp  pool.hpp
src/: main.cpp  world.cpp
src/entity/: entity.cpp  manager.cpp
src/thread/: jobs.cpp  pool.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
